--- a/week01/styles/site-plan.css
+++ b/week01/styles/site-plan.css
@@ -5,25 +5,25 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #3A201F   ;
-  --secondary-color: #D8D9D4 ;
-  --accent1-color: #252C27;
-  --accent2-color: #C29B93;
+  --primary-color: #755440;
+  --secondary-color: #D9C6B7;
+  --accent1-color: #AA571D;
+  --accent2-color: #422818;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Aboreto";
   --paragraph-font: "Cormorant Garamond", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #1D1D1C;  /* headlines on a white background */ 
-  --headline-color-on-color: #D8D9D4; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #1D1D1C; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #D8D9D4; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #3A201F   ;
-  --nav-link-color: #252C27;
-  --nav-background-color: #C29B93;
-  --nav-hover-link-color: #D8D9D4;
-  --nav-hover-background-color: #252C27;
+  --headline-color-on-white: #422818;  /* headlines on a white background */ 
+  --headline-color-on-color: #D9C6B7; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #422818; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #D9C6B7; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #422818   ;
+  --nav-link-color: #D9C6B7;
+  --nav-background-color: #AA571D;
+  --nav-hover-link-color: #D9C6B7;
+  --nav-hover-background-color: #755440;
 }
 
 
@@ -103,13 +103,12 @@ nav {
   background-color: var(--nav-background-color);
   line-height: 3em;
   text-align: center;
+  justify-content: center;
   font-size: 1.2em;
-}
-nav  {
   list-style-type: none;
   display: flex;
-
 }
+
 nav a {
   padding:1em;
   min-width: 120px;
